# panther_description

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  bullet.py  components.repos  docker-compose.yaml  package.xml
.github/workflows/: catkin_test_build.yaml  colcon_test_build.yaml
config/: WH01.yaml  WH02.yaml  WH04.yaml
env-hooks/: panther_description.dsv.in
examples/dual_rplidar_s1_and_orbbec_asta/: panther.urdf.xacro
examples/ouster_os1_32/: panther.urdf.xacro
examples/rpliar_s1_and_gps/: panther.urdf.xacro
meshes/WH01/: wheel_a.dae  wheel_b.stl
meshes/WH02/: rr_wheel.dae  wheel_a.dae  wheel_b.dae  wheel_b.stl  wheel_c.dae
meshes/WH04/: wheel_a.stl
meshes/components/: external_antenna.dae
panther_description/: CMakeLists.txt  package.xml
panther_description/config/: WH01.yaml  WH02.yaml  WH04.yaml  panther_common.yaml
panther_description/env-hooks/: panther_description.dsv.in
panther_description/meshes/: body.stl
panther_description/meshes/WH03/: collision.stl
panther_description/meshes/mecanum_wheels/: wheel_a.stl
panther_description/meshes/small_pneumatic_wheels/: wheel_b.stl
panther_description/models/panther/: body.urdf.xacro  gazebo_plugins.gazebo.xacro  model.config  panther.urdf.xacro  wheel.urdf.xacro
panther_description/models/panther/components/: orbbec_astra.gazebo.xacro  ouster_os1_32.gazebo.xacro  rplidar_s1.gazebo.xacro  velodyne_puck.gazebo.xacro
panther_description/models/panther/config/: WH01.yaml  WH04.yaml
panther_description/models/panther/meshes/: body_top.stl  cover.stl
panther_description/models/panther/meshes/WH02/: collision.stl
panther_description/rviz/: panther.rviz
panther_description/urdf/: body.urdf.xacro  gazebo_plugins.gazebo.xacro  panther.urdf  panther.urdf.xacro
panther_description/urdf/components/: orbbec_astra.gazebo.xacro  ouster_os1_32.gazebo.xacro  rplidar_s1.gazebo.xacro  velodyne_puck.gazebo.xacro
panther_description/worlds/: willowgarage.world
rviz/: panther.rviz
src/panther_description/: CMakeLists.txt  package.xml  setup.py
src/panther_gazebo/: CMakeLists.txt  package.xml
src/panther_navigation/: CMakeLists.txt  (+1 more)
urdf/: body.urdf.xacro  panther.urdf  panther.urdf.xacro  panther_macro.urdf.xacro  wheel.urdf.xacro
(+65 files in other folders)
