<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panther_description</name>
  <version>0.1.1</version>

  <description>URDF descriptions of Panther robot</description>
  <license>Apache License 2.0</license>

  <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>
  <maintainer email="contact@husarion.com">Husarion</maintainer>

  <url type="website">https://husarion.com</url>
  <url type="bugtracker">https://github.com/husarion/panther_description/issues</url>
  <url type="repository">https://github.com/husarion/panther_description/tree/ros2</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <exec_depend>ros_components_description</exec_depend>

  <exec_depend condition="$ROS_DISTRO == foxy">joint_state_publisher</exec_depend>
  <exec_depend condition="$ROS_DISTRO == galactic">joint_state_broadcaster</exec_depend>
  <exec_depend condition="$ROS_DISTRO == humble">joint_state_broadcaster</exec_depend>
  
  <exec_depend condition="$GAZEBO_VERSION == ignition-gazebo">ros_ign</exec_depend>
  <exec_depend condition="$GAZEBO_VERSION == gazebo-classic">gazebo_ros</exec_depend>
  <exec_depend condition="$GAZEBO_VERSION == gazebo-classic">gazebo_plugins</exec_depend>
  <exec_depend condition="$GAZEBO_VERSION == gazebo-classic">hector_gazebo_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>